# vibelang-rs

./: .gitignore  BSPL-INTEGRATION.md  Cargo.toml  LICENSE  README.md
examples/: knowledge_retrieval.vibe
src/: config.rs  lib.rs  main.rs  sbspl.pet  vibelang.pest
src/compiler/: codegen.rs  macros.rs  mod.rs  parser.rs  project_builder.rs
src/runnable/: mod.rs
src/runtime/: client.rs  llm_interface.rs  llm_provider.rs  mod.rs  types.rs
src/tests/: end_to_end.rs  end_to_end_knowledge.rs  end_to_end_weather.rs  integration.rs  mod.rs
src/tests.old/: mod.rs
src/utils/: ast.rs
templates/: lib.rs.tera  main.rs.tera
tests/: test_integration_compiler.rs  test_integration_compiler_as_lib.rs  test_unit_extra.rs
