[package]
name = "vibelang"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
libloading = "0.8"
pest = "2.7"
pest_derive = "2.7"
curl = "0.4"
tempfile = "3.0"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "vibelang"
crate-type = ["cdylib", "rlib"]

[profile.test]
debug = 1
opt-level = 3

[profile.release]
strip = true 
lto = true
codegen-units = 1
overflow-checks = true
