[package]
name = "vibelang"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
pest = "2.7"
pest_derive = "2.7"
tera = "1.19"
once_cell = "1.19"
regex = "1.11.1"

[lib]
name = "vibelang"
crate-type = ["rlib"]

[profile.test]
debug = 1
opt-level = 3

[profile.release]
strip = true 
lto = true
codegen-units = 1
overflow-checks = true